# univerz-solana

./: Anchor.toml  Cargo.toml  README.md  get-lz-options.js  get-lz-options.ts  hardhat.config.js  package-lock.json  package.json  run-tests.sh
.cargo/: config.toml
migrations/: deploy.js
programs/univerz-solana/: Cargo.toml
programs/univerz-solana-backend/: Cargo.toml
programs/univerz-solana-backend/src/: lib.rs  state.rs
programs/univerz-solana-backend/src/controllers/: layerZeroController.ts
programs/univerz-solana-backend/src/instructions/: marketplace.rs
programs/univerz-solana-backend/src/routes/: layerZeroRoutes.ts
programs/univerz-solana-backend/src/services/: layerZeroService.ts
programs/univerz-solana-backend/tests/: test_initialize.rs
programs/univerz-solana/src/: lib.rs
tests/: tsconfig.json  univerz-arena.ts  univerz-solana.ts
